syntax = "proto3";

// cd ..
//protoc --proto_path=. --go_out=. --go_opt=paths=source_relative token/*.proto

package token;
//option go_package = ".;token";
option go_package = "github.com/yaruz/app/internal/app/proto/token";

import "google/protobuf/timestamp.proto";


message Token {
  string  AccessToken               = 1;
  string  TokenType                 = 2;
  string  RefreshToken              = 3;
  google.protobuf.Timestamp Expiry  = 4;
}


